--- a/02-JS_CSS_Clock/index02.html
+++ b/02-JS_CSS_Clock/index02.html
@@ -8,14 +8,6 @@
 
 
     <div class="clock">
-      <div>
-        <div class="hour12"></div>
-        <div class="hour1"></div>
-        <div class="hour2"></div>
-        <div class="hour3"></div>
-        <div class="hour4"></div>
-        <div class="hour5"></div>
-    </div>
       <div class="clock-face">
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
@@ -26,6 +18,7 @@
 
   <style>
     html {
+      background-color: #000;
       font-family: 'helvetica neue';
       text-align: center;
       font-size: 10px;
@@ -59,70 +52,83 @@
       position: relative;
       width: 100%;
       height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+    }
+    .clock-face:after {
+      content: '';
+      display: block;
+      background-color: #fff;
+      width: 20px;
+      height: 20px;
+      border-radius: 100%;
+      position: absolute;
+      transform: translate(-50% -50%);
+      top: 50%;
+      left: 50%;
     }
 
     .hand {
-      width: 1%;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+    }
+    .second-hand:after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 5px;
       height: 50%;
-      background: rgb(190, 190, 190);
-      position: absolute;
+      background-color: red;
       left: 50%;
+      bottom: 50%;
+      transform: translate(-50% 0);
     }
-    .hour-hand {
-      transform-origin: 0 50%;
-    }
-    .min-hand {
-      transform-origin: 0 0;
-    }
-    .second-hand {
-      transform-origin: 0 0;
-      background-color: rgb(255, 97, 97);
-    }
-    .hour12, .hour1, .hour2, .hour3, .hour4, .hour5 {
-      height: 1%;
-      width: 52vmin;
-      background: transparent;
-      border-left: 4vmin solid rgb(121, 121, 121);
-      border-right: 4vmin solid rgb(121, 121, 121);
-      transform-origin: -0% -50%;
-      top: 50%;
-      left: 51%;
+    .min-hand:after {
+      content: '';
+      display: block;
       position: absolute;
+      width: 10px;
+      height: 40%;
+      background-color: #fff;
+      left: 50%;
+      bottom: 50%;
+      transform: translate(-50% 0);
     }
-    .hour12 {
-      transform: rotateZ(90deg) translate(-50%, -50%);
-    }
-    .hour1 {
-      transform: rotateZ(-30deg) translate(-50%, -50%);
-    }
-    .hour2 {
-      transform: rotateZ(-60deg) translate(-50%, -50%);
-    }
-    .hour3 {
-      transform: rotateZ(0deg) translate(-50%, -50%);
-    }
-    .hour4 {
-      transform: rotateZ(30deg) translate(-50%, -50%);
-    }
-    .hour5 {
-      transform: rotateZ(60deg) translate(-50%, -50%);
+    .hour-hand:after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 10px;
+      height: 25%;
+      background-color: #fff;
+      left: 50%;
+      bottom: 50%;
+      transform: translate(-50% 0);
     }
 
   </style>
 
   <script>
-    const min = document.querySelector('.min-hand')
-    const sec = document.querySelector('.second-hand')
-    const hour = document.querySelector('.hour-hand')
-    const date = new Date()
-    let nowMin = date.getMinutes()
-    let nowHour = date.getHours()
-    let nowSec = date.getSeconds()
-    console.log(nowHour,nowMin,nowSec)
-    sec.style.transform = `rotateZ(${nowSec *  6 }deg)`
-    min.style.transform = `rotateZ(${nowMin *  6 }deg)`
-    hour.style.transform = `rotateZ(${nowHour *  30 }deg)`
+    ;(function(){
+      const hour = document.querySelector('.hour-hand')
+      const min = document.querySelector('.min-hand')
+      const sec = document.querySelector('.second-hand')
+      function setClock(){
+        const date = new Date()
+        let secDeg = date.getSeconds() * 6
+        let minDeg = date.getMinutes() * 6 + date.getSeconds() * 6 / 60
+        let hourDeg = date.getHours() * 30 + date.getMinutes() * 30 / 60
+        sec.style.transform = `rotate(${secDeg}deg)`
+        min.style.transform = `rotate(${minDeg}deg)`
+        hour.style.transform = `rotate(${hourDeg}deg)`
+      }
+      setClock()
+      // setInterval(setClock,1000)
+      function animationHandler (){
+        setClock()
+        window.requestAnimationFrame(animationHandler)
+      }
+      window.requestAnimationFrame(animationHandler)
+    })()
   </script>
 </body>
 </html>
