--- a/03-CSS_Variables/index03.html
+++ b/03-CSS_Variables/index03.html
@@ -14,8 +14,8 @@
     <label for="blur">Blur:</label>
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
-    <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    <label for="color">Base Color</label>
+    <input id="color" type="color" name="color" value="#ffc600">
   </div>
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
@@ -25,6 +25,11 @@
     /*
       misc styles, nothing to do with CSS variables
     */
+    :root {
+    --spacing : 10px;
+    --blur: 10px;
+    --color: #ffc600;
+    }
 
     body {
       text-align: center;
@@ -39,29 +44,30 @@
       margin-bottom: 50px;
     }
 
+    img {
+      background-color: var(--color);
+      padding: var(--spacing);
+      filter: blur(var(--blur));
+    }
     input {
       width: 100px;
     }
   </style>
 
   <script>
-    ;(function(){
-      const spacing = document.querySelector('#spacing')
-      const blur = document.querySelector('#blur')
-      const color = document.querySelector('#base')
+    ;(() => {
+      const inputs = document.querySelectorAll('.controls input')
       const img = document.querySelector('img')
       function cssVariablesHandler() {
-        img.setAttribute('style',`
-                                  padding: ${spacing.value+ spacing.dataset.sizing }; 
-                                  background-color: ${color.value}; 
-                                  filter: blur(${blur.value + blur.dataset.sizing};)
-                                  `)
+        const sizing = this.dataset.sizing || ''
+        document.documentElement.style.setProperty(`--${this.name}`,this.value + sizing);
       }
-      spacing.addEventListener('change',cssVariablesHandler)
-      blur.addEventListener('change',cssVariablesHandler)
-      color.addEventListener('change',cssVariablesHandler)
-
-      cssVariablesHandler()
+      inputs.forEach(input => {
+        let event = new Event('change')
+        input.addEventListener('change',cssVariablesHandler)
+        input.addEventListener('mousemove',cssVariablesHandler)
+        input.dispatchEvent(event)
+      })
     })()
   </script>
 
