--- a/06-Type_Ahead/index06.html
+++ b/06-Type_Ahead/index06.html
@@ -23,33 +23,42 @@ fetch(endpoint)
   })
   .then(json => {
     city.push(...json)
-    console.log(city)
   })
+
 const keyInput = document.querySelector('input')
 const sug = document.querySelector('.suggestions')
-keyInput.addEventListener('keyup',keywordHandler)
-function keywordHandler(){
+
+function numberWithCommas(x) {
+  return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',')
+}
+
+function displayMatches() {
+  const matchArray = keywordHandler(this.value)
+  const html = matchArray.map(place => {
+    const regex = new RegExp(this.value, 'gi')
+    const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`)
+    const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`)
+    return `
+      <li>
+        <span class="name">${cityName}, ${stateName}</span>
+        <span class="population">${numberWithCommas(place.population)}</span>
+      </li>
+    `
+  }).join('')
+  sug.innerHTML = html
+}
+function keywordHandler(key){
   let find = city.filter(item => {
-    return item.city.indexOf(this.value) !== -1
+    return item.city.indexOf(key) !== -1
   })
-  console.log(find)
-  if(!find.length) return
-  removeNodeHandler(find)
+  if(find.length) return find
 }
-function createNode(f){
-  f.forEach(item => {
-    let node = document.createElement('LI')
-    let searched = document.createTextNode(item.city);
-    node.appendChild(searched)
-    sug.appendChild(node)
-  })
-}
-function removeNodeHandler(f){
-  while (sug.firstChild) {
-    sug.removeChild(sug.firstChild);
-  }
-  createNode(f)
-}
+
+keyInput.addEventListener('keyup',displayMatches)
+keyInput.addEventListener('change', displayMatches);
+
+
+
 </script>
 </body>
 </html>
