--- a/07-Array_Cardio_Day2/index07.html
+++ b/07-Array_Cardio_Day2/index07.html
@@ -26,16 +26,25 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
-    // Array.prototype.every() // is everyone 19 or older?
-
+    const someOlder = people.some(p => 2020 - p.year >= 19 )
+    // Array.prototype.every() // is everyone 19 or older
+    const everyOlder = people.every(p => 2020-p.year >= 19)
+    console.log(someOlder,everyOlder)
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
+    const find = comments.find(f => f.id === 823423)
+    console.log(find)
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
-
+    const findIndex = comments.findIndex(index => index.id === 823423)
+    comments.splice(findIndex,1)
+    // const newComments = [
+    //   ...comments.slice(0, index),
+    //   ...comments.slice(index + 1)
+    // ]
+    console.log(comments)
   </script>
 </body>
 </html>
