--- a/00-Reaction_Game/index-FINISHED.html
+++ b/00-Reaction_Game/index-FINISHED.html
@@ -32,29 +32,31 @@
 </style>
 
 <script>
-  const body = document.querySelector('body')
-  const btn = document.querySelector('.content-btn')
-  function randomSecHandler(){
-    return Math.floor((Math.random()*5 + 1)*1000)
-  }
-  const sec = randomSecHandler()
-  function replaceBGC(){
-    body.style.backgroundColor = 'rgb(0, 255, 85)'
-  }
-  function clickBodyHandler(e){
-    const reaction = (Math.floor(e.timeStamp - sec)/1000).toFixed(2)
-    reaction > 0 ? alert(`反應時間為${reaction}秒`) : alert('還沒變色，你按太快了喔！')
-    btn.classList.remove('content-btn-display')
-    body.removeEventListener('click',clickBodyHandler)
-  }
-  function resetGameHandler(){
-    event.stopPropagation()
-    btn.classList.add('content-btn-display')
-    location.reload()
-  }
-  setTimeout(() => {
-    replaceBGC()
-  },sec)
-  body.addEventListener('click',clickBodyHandler)
-  btn.addEventListener('click',resetGameHandler)
+  ;(function(){
+    const body = document.querySelector('body')
+    const btn = document.querySelector('.content-btn')
+    function randomSecHandler(){
+      return Math.floor((Math.random()*5 + 1)*1000)
+    }
+    const sec = randomSecHandler()
+    function replaceBGC(){
+      body.style.backgroundColor = 'rgb(0, 255, 85)'
+    }
+    function clickBodyHandler(e){
+      const reaction = (Math.floor(e.timeStamp - sec)/1000).toFixed(2)
+      reaction > 0 ? alert(`反應時間為${reaction}秒`) : alert('還沒變色，你按太快了喔！')
+      btn.classList.remove('content-btn-display')
+      body.removeEventListener('click',clickBodyHandler)
+    }
+    function resetGameHandler(){
+      event.stopPropagation()
+      btn.classList.add('content-btn-display')
+      location.reload()
+    }
+    setTimeout(() => {
+      replaceBGC()
+    },sec)
+    body.addEventListener('click',clickBodyHandler)
+    btn.addEventListener('click',resetGameHandler)
+  })()
 </script>
