--- a/02-JS_CSS_Clock/index02-FINISHED.html
+++ b/02-JS_CSS_Clock/index02-FINISHED.html
@@ -34,8 +34,8 @@
     }
 
     .clock {
-      width: 30rem;
-      height: 30rem;
+      width: 40rem;
+      height: 40rem;
       border: 20px solid white;
       border-radius: 50%;
       margin: 50px auto;
@@ -61,7 +61,7 @@
       height: 20px;
       border-radius: 100%;
       position: absolute;
-      transform: translate(-50% -50%);
+      transform: translate(-50%, -50%);
       top: 50%;
       left: 50%;
     }
@@ -80,29 +80,29 @@
       background-color: red;
       left: 50%;
       bottom: 50%;
-      transform: translate(-50% 0);
+      transform: translate(-50%, 0);
     }
     .min-hand:after {
       content: '';
       display: block;
       position: absolute;
-      width: 10px;
-      height: 40%;
+      width: 8px;
+      height: 45%;
       background-color: #fff;
       left: 50%;
       bottom: 50%;
-      transform: translate(-50% 0);
+      transform: translate(-50%, 0);
     }
     .hour-hand:after {
       content: '';
       display: block;
       position: absolute;
-      width: 10px;
-      height: 25%;
+      width: 8px;
+      height: 30%;
       background-color: #fff;
       left: 50%;
       bottom: 50%;
-      transform: translate(-50% 0);
+      transform: translate(-50%, 0);
     }
 
   </style>
